--- a/Week 5 XX2/main.css
+++ b/Week 5 XX2/main.css
@@ -2,10 +2,10 @@ div {
     width: 200px;
     height: 200px;
     margin: 0 auto;
-    border: 10px solid green;
-    background-color: purple;
+    border: 17px solid pink;
+    background-color: brown;
     /*border-radius: 100%;*/
-    /*border-radius: 10% 150%;*/
+    /*border-radius: 17% 150%;*/
     border-radius: 10% 150% 100% 25%;
     /*
     TRBL
