--- a/Week  2/main.css
+++ b/Week  2/main.css
@@ -1,14 +1,46 @@
-h1 {
-    font-size: 48px;
+html {
+    font-size: 10px;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #00539F;
 }
 
-div {
-    width: 100px;
-    height: 100px;
+body {
+    width: 600px;
     margin: 0 auto;
-    border: 2px solid #000;
+    background-color: #00C957;
+    padding: 0 20px 20px 20px;
+    border: 5px solid black;
 }
 
-#rounded {
+img {
+    display: block;
+    margin: 30px auto;
     border-radius: 50%;
+    border: 20px ridge gold;
+}
+
+h1 {
+    font-size: 24px;
+    margin-top: 30px;
+}
+
+p {
+    font-size: 16px;
+    margin-top: 12px;
+}
+
+#element1 {
+    color: #0266C8;
+}
+
+#element2 {
+    color: #F90101;
+}
+
+#element3 {
+    color: #F2B50F;
+}
+
+#element4 {
+    color: #00933B;
 }
