--- a/Week 11/svg101/main.css
+++ b/Week 11/svg101/main.css
@@ -20,8 +20,8 @@ body {
 }
 
 form {
-    border: 10px groove #00C957;
-    padding: 20px;
+    border: 10px groove #33FF99;
+    padding: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
